<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_image2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/nav_icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="30dp"
            android:paddingTop="110dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Register!"
                android:textColor="#FDFEFE"
                android:textSize="45sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:padding="25dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#FDFEFE">

                <AutoCompleteTextView
                    android:id="@+id/et_name"
                    android:drawableLeft="@mipmap/ic_perm_identity_white_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="15dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#FDFEFE">

                <AutoCompleteTextView
                    android:id="@+id/et_banji"
                    android:drawableLeft="@mipmap/ic_perm_identity_white_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/classname"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="15dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#FDFEFE">

                <AutoCompleteTextView
                    android:id="@+id/et_nicheng"
                    android:drawableLeft="@mipmap/ic_perm_identity_white_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="15dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#FDFEFE">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:drawableLeft="@mipmap/ic_lock_outline_white_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="15dp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:text="@string/resign_in_button"
                android:textAllCaps="false"
                android:textColor="#FDFEFE"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>